<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">Zotes</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="abilities">Abilities</string>
    <string name="pokemon_from_zotes_are_well_take_care_of_and_trained_at_the_elite_4_pokemon_providing_an_easy_victory_for_the_upcoming_pokemon_league_in_the_kento_region">Pokemon from Zotes are trained exclusively by the elite 4.Providing new trainers an easy victory for upcoming pokemon league in the Kento Region.</string>
    <string name="viewgroup_with_three_sections">Viewgroup with three sections</string>
    <string name="todo">TODO</string>
    <string name="pokemon_image">pokemon image</string>
    <string name="shoping_cart">Cart</string>
    <string name="_100">$100</string>
    <string name="pokesampleimage">pokeSampleImage</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="cost_500" translatable="false">$500</string>
    <string name="complete_order">Complete Order</string>
    <string name="cost">Cost</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="update_address">Update Address</string>
    <string name="open_dialog_form">open dialog form</string>
    <string name="pokemon_eshop">Pokemon Eshop</string>
    <string name="address">Address</string>
    <string name="title_activity_set_up_profile">SetUpProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="add_review">Add Review</string>
    <string name="description">Description</string>
    <string name="create_review">Create Review</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="sample_buy_now_image">sample buy now image</string>
    <string name="poke_name">Poke Name</string>
    <string name="buy_now">Buy Now</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="setting">Setting</string>
    <string name="_5_26_22">5/26/22</string>
    <string name="total_price">Total Price</string>
    <string name="orderNumEx">Order #</string>
    <string name="sample_product_image">sample product image</string>
    <string name="buy_with_google">buy with google</string>
    <string name="category">Category</string>
    <string name="rating">Rating</string>
    <string name="stock">Stock</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total :</string>
    <string name="search">Search</string>
    <string name="details">details</string>
    <string name="review">Review</string>
    <string name="settings">Settings</string>
    <string name="add_new_review">add new review</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="sample_user_profile">sample user profile</string>
    <string name="edgar_chilin">Edgar Chilin</string>
    <string name="this_is_a_very_good_pokemon_expected_nothing_more_from_this_pokemon">This is a very good pokemon. Expected nothing more from this pokemon.</string>
    <string name="remove_count_button">remove count button</string>
    <string name="_0">0</string>
    <string name="remove_item">remove item</string>
</resources>