<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context=".overlay.ReviewItemOverlay">

    <TextView
        android:id="@+id/tvCreateReviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/review"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@id/glReviewVEnd"
        app:layout_constraintStart_toStartOf="@id/glReviewV0"
        app:layout_constraintTop_toTopOf="@id/glReviewH0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etReviewNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/teal_200"
        app:hintTextColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@id/glReviewVEnd"
        app:layout_constraintStart_toStartOf="@id/glReviewV0"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateReviewTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReviewerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etReviewRatingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/rating"
        app:boxStrokeColor="@color/teal_200"
        app:hintTextColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@id/glReviewVEnd"
        app:layout_constraintStart_toStartOf="@id/glReviewV0"
        app:layout_constraintTop_toBottomOf="@+id/etReviewNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReviewRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etReviewDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/description"
        app:boxStrokeColor="@color/teal_200"
        app:hintTextColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@id/glReviewVEnd"
        app:layout_constraintStart_toStartOf="@id/glReviewV0"
        app:layout_constraintTop_toBottomOf="@+id/etReviewRatingLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReviewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreateReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_review"
        app:layout_constraintEnd_toEndOf="@id/glReviewVEnd"
        app:layout_constraintStart_toStartOf="@id/glReviewV0"
        app:layout_constraintTop_toBottomOf="@+id/etReviewDescriptionLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glReviewV0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="7dp"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glReviewVEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="7dp"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glReviewH0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="5dp"
        app:layout_constraintGuide_percent="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>