<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menufragments.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUpdateAddress"
        android:layout_width="369dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/settings_box_background"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"

        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/update_address"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="47dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/pokebox"
            android:contentDescription="@string/open_dialog_form"
            android:elevation="1dp"
            android:padding="7dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUpdatePassword"
        android:layout_width="376dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/settings_box_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clUpdateAddress"
        app:layout_constraintDimensionRatio="H,1:1"
        >

        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            />

        <ImageView
            android:id="@+id/ivResetPassword"
            android:layout_width="47dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/pokebox"
            android:contentDescription="@string/open_dialog_form"
            android:elevation="4dp"

            android:padding="7dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/btnSignOut"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/logout_btn_background"
        android:elevation="2dp"
        android:text="@string/log_out"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clUpdatePassword"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintDimensionRatio="H,1:1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>